Possibly fixed a bug where the image stretches

--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -114,6 +114,8 @@
     .product-image {
       max-height: 25rem;
       max-width: 25rem;
+      width: auto;
+      height: auto;
       margin-bottom: 4rem;
     }
 
